--- a/index.ipynb
+++ b/index.ipynb
@@ -29,11 +29,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18 mean\n",
+      "18 median\n",
+      "18 mode\n",
+      "This is a symetrical distribution, where mean, median and mode are all in the center\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here "
+    "\n",
+    "print(18,'mean')\n",
+    "print(18, 'median')\n",
+    "print(18, 'mode')\n",
+    "print('This is a symetrical distribution, where mean, median and mode are all in the center')"
    ]
   },
   {
@@ -50,11 +65,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "94.25 mean\n",
+      "97 median\n",
+      "97 mode\n",
+      "the mean is the average of the data set but appears to be much lower than the median and mode\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here "
+    "print(94.25, 'mean')\n",
+    "print(97, 'median')\n",
+    "print(97, 'mode')\n",
+    "print('the mean is the average of the data set but appears to be much lower than the median and mode')"
    ]
   },
   {
@@ -69,9 +98,17 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "He would need to sell 19 books the next day to have an average sale of 17 books\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here "
+    "print('He would need to sell 19 books the next day to have an average sale of 17 books')"
    ]
   },
   {
@@ -94,11 +131,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# 8 boys"
    ]
   },
   {
@@ -114,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# about 50% boys and 22 % girls"
    ]
   },
   {
@@ -130,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# 1.3"
    ]
   },
   {
@@ -146,7 +183,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# Boys spend less time on FB than girls\n",
+    "# The most that boys spend on FB from this data set are about 2 hrs whereas for girls it is double.\n"
    ]
   }
  ],
@@ -166,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
