central tendencies quiz completed

--- a/index.ipynb
+++ b/index.ipynb
@@ -29,11 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# mean = 18 , median = 18, mode = 18\n",
+    "# this is a symetrical distribution where the mean, median and mode are all in the center"
    ]
   },
   {
@@ -50,11 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# mean = 94.25, median = 97, mode = 97\n",
+    "# the mean appears to be much lower than the median and mode. "
    ]
   },
   {
@@ -67,11 +69,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# He would need to sell 19 books the next day to have an average of 17 books sold."
    ]
   },
   {
@@ -94,11 +96,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# 8 boys"
    ]
   },
   {
@@ -110,11 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# About 50% for boys and about 22% for girls"
    ]
   },
   {
@@ -126,11 +128,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# 1.3 - 1 hr. a day"
    ]
   },
   {
@@ -142,12 +144,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# Boys spend less time on FB than girls\n",
+    "# The most that boys spend on FB from this data set are about 2 hrs whereas for girls it is double.\n",
+    " "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
